# fastMD5

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  option.rs
test/: hh.sh
