[package]
name = "fastmd5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["string"] }
crossbeam-channel = "0.5.11"
crossbeam-utils = "0.8.19"
md-5 = "0.10.6"
walkdir = "2.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

